# ckanext-stomallorca

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini  test.ini.save
ckanext/stomallorca_theme/: plugin.py
ckanext/stomallorca_theme/assets/: script.js  webassets.yml
ckanext/stomallorca_theme/assets/css/: stomallorca_theme.css
ckanext/stomallorca_theme/i18n/: ckanext-stomallorca_theme.pot
ckanext/stomallorca_theme/i18n/ca/LC_MESSAGES/: ckanext-stomallorca_theme.mo  ckanext-stomallorca_theme.po
ckanext/stomallorca_theme/i18n/es/LC_MESSAGES/: ckanext-stomallorca_theme.mo  ckanext-stomallorca_theme.po
ckanext/stomallorca_theme/schemas/: dataset.yaml  group.json  organization.json
ckanext/stomallorca_theme/templates/: base.html  base_home.html  footer.html  header.html  header_home.html  page_home.html
ckanext/stomallorca_theme/templates/group/: activity_stream.html  read_base.html
ckanext/stomallorca_theme/templates/group/snippets/: group_item.html  info.html
ckanext/stomallorca_theme/templates/home/: index.html  layout1.html
ckanext/stomallorca_theme/templates/home/snippets/: head.html  language_selector.html  nav_bar_2.html  navegador.html  navegador.html.save  search.html  stom_groups.html
ckanext/stomallorca_theme/templates/organization/: activity_stream.html  read_base.html
ckanext/stomallorca_theme/templates/package/: activity.html  read_base.html  search.html
ckanext/stomallorca_theme/templates/package/snippets/: additional_info.html  additional_info_detail.html  resource_view.html  resource_view_filters.html
ckanext/stomallorca_theme/templates/scheming/form_snippets/: extrafields_fluent_title.html
ckanext/stomallorca_theme/templates/snippets/: facet_list.html  language_selector.html  package_item.html  redes_header.html  social.html  tag_list.html
ckanext/stomallorca_theme/tests/: test_plugin.py
(+4 files in other folders)
